# Estructura-de-datos-homework

./: CMakeLists.txt  Orden de tareas  README.md
Home-act-repo 1/: main.c
Home-act-repo 10/Act-1/: rectangle.c  rectangle.h
Home-act-repo 10/Act-2/: date.c  date.h  date_test.c
Home-act-repo 11/Act-1/: c.txt  main.c
Home-act-repo 12-FINAL/Act-1/: captura.c  mostrar.c  multiplica.c
Home-act-repo 12/Act-1/: captura.c
Home-act-repo 12/Act-2/: multiplica.c
Home-act-repo 12/Act-3/: mostrar.c
Home-act-repo 13/Act-1/: main.c
Home-act-repo 14/Act-1/: ejer1.c
Home-act-repo 15/Act-1/: ejer1.c
Home-act-repo 16/Act-1/: datatypes.c  datatypes.h  ejemplostack1.c  ejemplostack2.c  stack.c  stack.h
Home-act-repo 17/Act-1/: datatypes.h  queue.c  testqueue.c
Home-act-repo 18/Act-1/: datatypes.c  queue.h
Home-act-repo 19/Act-1/: list.c  list.h  testlista.c
Home-act-repo 2/: main.c
Home-act-repo 20/Act-1/: datatypes.c  eval.c  evalexpr.c  stack.h
Home-act-repo 21/Act-1/: ejer1.c  prueba.txt  stack.c  test.c
Home-act-repo 22/Act-1/: pruebas.c  set.c  set.h
Home-act-repo 23/Act-1/: CMakeLists.txt  basico.c  pruebas_ej2.c  set.c  set.h
Home-act-repo 24/Act-1/: CMakeLists.txt  main.c
Home-act-repo 24/Act-2/: CMakeLists.txt  main.c
Home-act-repo 25/Act-1/: CMakeLists.txt
Home-act-repo 26 Ultima tarea/: list.h  map.c
Home-act-repo 26 Ultimo/: CMakeLists.txt  map.c  map.h  programa.c
Home-act-repo 3/: act1.c  act2.c  act3.c
Home-act-repo 4/Act-1/: act1.c  act2.c
Home-act-repo 4/Act-2/: act1.c
Home-act-repo 7/: ejer1.c
(+9 files in other folders)
